syntax = "proto3";

option csharp_namespace = "OpenVASP.ProtocolMessages.Messages";

package protobuf_openvasp;

import "ProtoVaspInfo.proto";
import "ProtoMessage.proto";
import "ProtoOriginator.proto";
import "ProtoBeneficiary.proto";
import "ProtoTransferReply.proto";
import "ProtoTransaction.proto";

message ProtoTransferConfirmationMessage {

  ProtoMessage message = 1;

  ProtoOriginator originator = 2;

  ProtoBeneficiary beneficiary = 3;

  ProtoTransferReply transfer = 4;

  ProtoTransaction transaction = 5;

  string comment = 6;

  ProtoVaspInfo VaspInfo = 7;
}
